--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,6 +2,7 @@
 @import "compass/css3";
 
 .llamada-gratis {
+	margin: 0 0 0 1em;
 
 	// common position properties:
 	&.bottom-right,
@@ -41,6 +42,11 @@
 	a {
 		border: none;
 		display: block;
+		padding: 0 1em;
+
+		&:hover {
+			background-color: white;
+		}
 	}
 
 	img {
