--- a/scss/style.scss
+++ b/scss/style.scss
@@ -45,22 +45,18 @@
 		padding: 0 1em;
 
 		.sprite {
-			&:before {
-				background: transparent url('../images/phone.png') 0 0 no-repeat;
-				position: absolute;
-				display: block;
-				left: 0; top: 0; right: 0; bottom: 0;
-				width: 50px;
-			}
+			background: transparent url('../images/phone.png') 0 0 no-repeat;
+			position: absolute;
+			display: inline-block;
+			left: 0; top: 0; right: 0; bottom: 0;
+			width: 50px;
 		}
 
 		&:hover {
 			background-color: white;
 
 			.sprite {
-				&:before {
-					background-position: 0 -50px;
-				}
+				background-position: 0 -50px;
 			}
 		}
 	}
