--- a/css/style.css
+++ b/css/style.css
@@ -59,5 +59,5 @@
 }
 /* line 58, C:/Users/Hans Doller/Documents/GitHub/wp-plugin-llamada-gratis/scss/style.scss */
 .llamada-gratis a:hover .sprite {
-  background-position: 0 -50px;
+  background-position: -50px 0;
 }
