--- a/scss/style.scss
+++ b/scss/style.scss
@@ -45,13 +45,16 @@
 		padding: 0 1em;
 
 		.sprite {
+			background-color: black;
 			background: transparent url('../images/phone.png') 0 0 no-repeat;
 			display: inline-block;
 			width: 50px;
+			@include border-radius(1em);
 		}
 
 		&:hover {
 			background-color: white;
+			@include border-radius(1em);
 
 			.sprite {
 				background-position: -50px 0;
