--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@
 .llamada-gratis a {
   border: none;
   display: block;
-  padding: 0 1em;
+  padding: 1em;
 }
 /* line 47, C:/Users/Hans Doller/Documents/GitHub/wp-plugin-llamada-gratis/scss/style.scss */
 .llamada-gratis a .sprite {
@@ -48,13 +48,14 @@
   background: transparent url("../images/phone.png") 0 0 no-repeat;
   display: inline-block;
   width: 50px;
+  height: 69px;
   -webkit-border-radius: 1em;
   -moz-border-radius: 1em;
   -ms-border-radius: 1em;
   -o-border-radius: 1em;
   border-radius: 1em;
 }
-/* line 55, C:/Users/Hans Doller/Documents/GitHub/wp-plugin-llamada-gratis/scss/style.scss */
+/* line 56, C:/Users/Hans Doller/Documents/GitHub/wp-plugin-llamada-gratis/scss/style.scss */
 .llamada-gratis a:hover {
   background-color: white;
   -webkit-border-radius: 1em;
@@ -63,7 +64,7 @@
   -o-border-radius: 1em;
   border-radius: 1em;
 }
-/* line 59, C:/Users/Hans Doller/Documents/GitHub/wp-plugin-llamada-gratis/scss/style.scss */
+/* line 60, C:/Users/Hans Doller/Documents/GitHub/wp-plugin-llamada-gratis/scss/style.scss */
 .llamada-gratis a:hover .sprite {
   background-position: -50px 0;
 }
