--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,7 +2,7 @@
 @import "compass/css3";
 
 .llamada-gratis {
-	margin: 0 0 0 1em;
+	margin: 1em 1em 0 0;
 
 	// common position properties:
 	&.bottom-right,
