--- a/scss/style.scss
+++ b/scss/style.scss
@@ -40,12 +40,13 @@
 	}
 
 	a {
+		@include border-radius(1em);
 		border: none;
 		display: block;
 		padding: 1em;
+		background-color: #efe;
 
 		.sprite {
-			background-color: black;
 			background: transparent url('../images/phone.png') 0 0 no-repeat;
 			display: inline-block;
 			width: 50px;
@@ -55,7 +56,6 @@
 
 		&:hover {
 			background-color: white;
-			@include border-radius(1em);
 
 			.sprite {
 				background-position: -50px 0;
