Added production styling compression.

--- a/css/style.css
+++ b/css/style.css
@@ -1,70 +1,1 @@
-@CHARSET "UTF-8";
-/* line 4, C:/Users/Hans Doller/Documents/GitHub/wp-plugin-llamada-gratis/scss/style.scss */
-.llamada-gratis {
-  margin: 1em 1em 0 0;
-}
-/* line 11, C:/Users/Hans Doller/Documents/GitHub/wp-plugin-llamada-gratis/scss/style.scss */
-.llamada-gratis.bottom-right, .llamada-gratis.bottom-left, .llamada-gratis.top-right, .llamada-gratis.top-left {
-  position: absolute;
-  display: block;
-}
-/* line 16, C:/Users/Hans Doller/Documents/GitHub/wp-plugin-llamada-gratis/scss/style.scss */
-.llamada-gratis.inline-block {
-  display: inline-block;
-}
-/* line 20, C:/Users/Hans Doller/Documents/GitHub/wp-plugin-llamada-gratis/scss/style.scss */
-.llamada-gratis.inline {
-  display: inline;
-}
-/* line 25, C:/Users/Hans Doller/Documents/GitHub/wp-plugin-llamada-gratis/scss/style.scss */
-.llamada-gratis.bottom-right {
-  bottom: 0;
-  right: 0;
-}
-/* line 29, C:/Users/Hans Doller/Documents/GitHub/wp-plugin-llamada-gratis/scss/style.scss */
-.llamada-gratis.bottom-left {
-  bottom: 0;
-  left: 0;
-}
-/* line 33, C:/Users/Hans Doller/Documents/GitHub/wp-plugin-llamada-gratis/scss/style.scss */
-.llamada-gratis.top-right {
-  top: 0;
-  right: 0;
-}
-/* line 37, C:/Users/Hans Doller/Documents/GitHub/wp-plugin-llamada-gratis/scss/style.scss */
-.llamada-gratis.top-left {
-  top: 0;
-  left: 0;
-}
-/* line 42, C:/Users/Hans Doller/Documents/GitHub/wp-plugin-llamada-gratis/scss/style.scss */
-.llamada-gratis a {
-  -webkit-border-radius: 1em;
-  -moz-border-radius: 1em;
-  -ms-border-radius: 1em;
-  -o-border-radius: 1em;
-  border-radius: 1em;
-  border: none;
-  display: block;
-  padding: 1em;
-  background-color: rgba(238, 255, 238, 0.4);
-}
-/* line 49, C:/Users/Hans Doller/Documents/GitHub/wp-plugin-llamada-gratis/scss/style.scss */
-.llamada-gratis a .sprite {
-  background: transparent url("../images/phone.png") 0 0 no-repeat;
-  display: inline-block;
-  width: 50px;
-  height: 69px;
-  -webkit-border-radius: 1em;
-  -moz-border-radius: 1em;
-  -ms-border-radius: 1em;
-  -o-border-radius: 1em;
-  border-radius: 1em;
-}
-/* line 57, C:/Users/Hans Doller/Documents/GitHub/wp-plugin-llamada-gratis/scss/style.scss */
-.llamada-gratis a:hover {
-  background-color: rgba(255, 255, 255, 0.7);
-}
-/* line 60, C:/Users/Hans Doller/Documents/GitHub/wp-plugin-llamada-gratis/scss/style.scss */
-.llamada-gratis a:hover .sprite {
-  background-position: -50px 0;
-}
+@CHARSET "UTF-8";.llamada-gratis{margin:1em 1em 0 0}.llamada-gratis.bottom-right,.llamada-gratis.bottom-left,.llamada-gratis.top-right,.llamada-gratis.top-left{position:absolute;display:block}.llamada-gratis.inline-block{display:inline-block}.llamada-gratis.inline{display:inline}.llamada-gratis.bottom-right{bottom:0;right:0}.llamada-gratis.bottom-left{bottom:0;left:0}.llamada-gratis.top-right{top:0;right:0}.llamada-gratis.top-left{top:0;left:0}.llamada-gratis a{-webkit-border-radius:1em;-moz-border-radius:1em;-ms-border-radius:1em;-o-border-radius:1em;border-radius:1em;border:none;display:block;padding:1em;background-color:rgba(238,255,238,0.4)}.llamada-gratis a .sprite{background:transparent url("../images/phone.png") 0 0 no-repeat;display:inline-block;width:50px;height:69px;-webkit-border-radius:1em;-moz-border-radius:1em;-ms-border-radius:1em;-o-border-radius:1em;border-radius:1em}.llamada-gratis a:hover{background-color:rgba(255,255,255,0.7)}.llamada-gratis a:hover .sprite{background-position:-50px 0}
